--- a/HWDPortalMaui.csproj
+++ b/HWDPortalMaui.csproj
@@ -69,6 +69,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.AI.OpenAI" Version="2.5.0-beta.1" />
         <PackageReference Include="Dapper" Version="2.1.66" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
