--- a/HWDPortalMaui.csproj
+++ b/HWDPortalMaui.csproj
@@ -71,6 +71,7 @@
     <ItemGroup>
         <PackageReference Include="Azure.AI.OpenAI" Version="2.5.0-beta.1" />
         <PackageReference Include="Dapper" Version="2.1.66" />
+        <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.20" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
