--- a/HWDPortalMaui.csproj
+++ b/HWDPortalMaui.csproj
@@ -23,7 +23,7 @@
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
     <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
-    <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
+    <AppxSymbolPackageEnabled>True</AppxSymbolPackageEnabled>
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
     <PackageCertificateThumbprint>D1A5D0CE2253AA12E490F8618AD809A3AFE4B50A</PackageCertificateThumbprint>
     
