--- a/HWDPortalMaui.csproj
+++ b/HWDPortalMaui.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
     <TargetFrameworks>net8.0-windows10.0.19041.0</TargetFrameworks>
+    <WindowsAppSdkVersion>1.8.250916003</WindowsAppSdkVersion>
     <OutputType>Exe</OutputType>
     <RootNamespace>HWDPortalMaui</RootNamespace>
     <UseMaui>true</UseMaui>
