--- a/HWDPortalMaui.csproj
+++ b/HWDPortalMaui.csproj
@@ -1,42 +1,37 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
-    <TargetFrameworks>net8.0-windows10.0.19041.0</TargetFrameworks>
-    <WindowsAppSdkVersion>1.8.250916003</WindowsAppSdkVersion>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>HWDPortalMaui</RootNamespace>
-    <UseMaui>true</UseMaui>
-    <SingleProject>true</SingleProject>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <EnableDefaultCssItems>false</EnableDefaultCssItems>
-    <Nullable>enable</Nullable>
+      <TargetFrameworks>net8.0-windows10.0.19041.0</TargetFrameworks>
+      <WindowsAppSdkVersion>1.8.250916003</WindowsAppSdkVersion>
+      <OutputType>Exe</OutputType>
+      <RootNamespace>HWDPortalMaui</RootNamespace>
+      <UseMaui>true</UseMaui>
+      <SingleProject>true</SingleProject>
+      <ImplicitUsings>enable</ImplicitUsings>
+      <EnableDefaultCssItems>false</EnableDefaultCssItems>
+      <Nullable>enable</Nullable>
 
-    <ApplicationTitle>HWDPortalMaui</ApplicationTitle>
-    <ApplicationId>com.companyname.hwdportalmaui</ApplicationId>
-    <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
-    <ApplicationVersion>1</ApplicationVersion>
+      <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
 
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
-    <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
+      <ApplicationTitle>HWDPortalMaui</ApplicationTitle>
+      <ApplicationId>com.companyname.hwdportalmaui</ApplicationId>
+      <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+      <ApplicationVersion>1</ApplicationVersion>
 
-    <!-- MSIX 封裝設定 -->
-    <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
-    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
-    <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
-    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
-    <AppxSymbolPackageEnabled>True</AppxSymbolPackageEnabled>
-    <GenerateTestArtifacts>True</GenerateTestArtifacts>
-    <PackageCertificateThumbprint>D1A5D0CE2253AA12E490F8618AD809A3AFE4B50A</PackageCertificateThumbprint>
-    
-    <!-- 更新設定 - 修改這裡 -->
-    <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
-    <!-- 改用 file:// 協議 -->
-    <AppInstallerUri>file://tpea31hwdfs01/Automation/Automation%20Software/HWD_Portal_Maui/Setup/</AppInstallerUri>
-    <!-- 或使用 HTTP 伺服器 (推薦) -->
-    <!-- <AppInstallerUri>http://tpea31hwdfs01/HWD_Portal_Maui/Setup/</AppInstallerUri> -->
-    
-    <!-- 新增更新檢查頻率設定 -->
-    <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
+      <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
+      <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
+
+      <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
+      <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+      <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
+      <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+      <AppxSymbolPackageEnabled>True</AppxSymbolPackageEnabled>
+      <GenerateTestArtifacts>True</GenerateTestArtifacts>
+      <PackageCertificateThumbprint>D1A5D0CE2253AA12E490F8618AD809A3AFE4B50A</PackageCertificateThumbprint>
+      
+      <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
+      <AppInstallerUri>file://tpea31hwdfs01/Automation/Automation%20Software/HWD_Portal_Maui/Setup/</AppInstallerUri>
+      <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-windows10.0.19041.0|AnyCPU'">
