--- a/HWDPortalMaui.csproj
+++ b/HWDPortalMaui.csproj
@@ -92,4 +92,8 @@
       </EmbeddedResource>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\js\" />
+    </ItemGroup>
+
 </Project>
