--- a/HWDPortalMaui.csproj
+++ b/HWDPortalMaui.csproj
@@ -75,6 +75,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
         <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.250916003" />
+        <PackageReference Include="Z.Blazor.Diagrams" Version="3.0.3" />
     </ItemGroup>
 
     <ItemGroup>
